--- a/superuser_interfaces/pubspec.yaml
+++ b/superuser_interfaces/pubspec.yaml
@@ -1,6 +1,11 @@
 name: superuser_interfaces
 description: Interface defination for verifying user executes Flutter program with superuser role.
+homepage: https://github.com/rk0cc/superuser
+repository: https://github.com/rk0cc/superuser/tree/main/superuser_interfaces
 version: 1.0.0
 environment: 
   sdk: '>=3.4.0 <4.0.0'
+dev_dependencies:
+  lints: ^4.0.0
+  test: ^1.25.8
 
