Create wrapper package

--- a/superuser_plugin_unix/pubspec.yaml
+++ b/superuser_plugin_unix/pubspec.yaml
@@ -1,6 +1,8 @@
 name: superuser_plugin_unix
 description: "Detect, verify user who execute Flutter program has superuser role in UNIX"
 version: 0.1.0
+homepage: https://github.com/rk0cc/superuser
+repository: https://github.com/rk0cc/superuser/tree/main/superuser_plugin_unix
 environment:
   sdk: '>=3.4.0 <4.0.0'
   flutter: '>=3.22.0'
