--- a/superuser_plugin_windows/pubspec.yaml
+++ b/superuser_plugin_windows/pubspec.yaml
@@ -2,6 +2,7 @@ name: superuser_plugin_windows
 description: "Detect, verify user who execute Flutter program has superuser role in Windows"
 version: 0.1.0
 homepage: https://github.com/rk0cc/superuser
+repository: https://github.com/rk0cc/superuser/tree/main/superuser_plugin_windows
 environment:
   sdk: '>=3.4.0 <4.0.0'
   flutter: '>=3.22.0'
