--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,6 +27,11 @@ jobs:
         working-directory: ./superuser
       - name: Build example
         run: flutter build windows --release
+      - name: Upload build
+        uses: actions/upload-artifact@v4
+        with:
+          name: superuser_demo_win
+          path: superuser/example/build/windows/x64/runner/Release/
   build_linux:
     name: Linux build
     runs-on: ubuntu-latest
@@ -43,3 +48,8 @@ jobs:
         working-directory: ./superuser
       - name: Build example
         run: flutter build linux --release
+      - name: Upload build
+        uses: actions/upload-artifact@v4
+        with:
+          name: superuser_demo_linux
+          path: superuser/example/build/linux/x64/release/bundle/
