--- a/superuser/pubspec.yaml
+++ b/superuser/pubspec.yaml
@@ -16,6 +16,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  meta: ^1.12.0
   superuser_interfaces: ^1.0.0
   superuser_plugin_unix: ">=0.1.0 <1.0.0"
   superuser_plugin_windows: ">=0.1.0 <1.0.0"
