New interface API

--- a/superuser_interfaces/pubspec.yaml
+++ b/superuser_interfaces/pubspec.yaml
@@ -2,12 +2,13 @@ name: superuser_interfaces
 description: Interface defination for verifying user executes Flutter program with superuser role.
 homepage: https://github.com/rk0cc/superuser
 repository: https://github.com/rk0cc/superuser/tree/main/superuser_interfaces
-version: 1.0.0
+version: 2.0.0
 environment: 
   sdk: '>=3.4.0 <4.0.0'
+dependencies: 
+  meta: ^1.12.0
 dev_dependencies:
   lints: ^4.0.0
-  test: ^1.25.8
 platforms:
   linux:
   macos:
