Uses full name to reduce rename before upload release

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,7 +27,7 @@ jobs:
       - name: Upload build
         uses: actions/upload-artifact@v4
         with:
-          name: superuser_demo_win
+          name: superuser_demo_windows
           path: superuser/example/build/windows/x64/runner/Release/
   build_linux:
     name: Linux build
