--- a/superuser_plugin_windows/pubspec.yaml
+++ b/superuser_plugin_windows/pubspec.yaml
@@ -1,6 +1,6 @@
 name: superuser_plugin_windows
 description: "Detect, verify user who execute Flutter program has superuser role in Windows"
-version: 1.0.0
+version: 2.0.0-m.1
 homepage: https://github.com/rk0cc/superuser
 repository: https://github.com/rk0cc/superuser/tree/main/superuser_plugin_windows
 environment:
