--- a/superuser/pubspec.yaml
+++ b/superuser/pubspec.yaml
@@ -19,8 +19,12 @@ dependencies:
     sdk: flutter
   meta: ^1.12.0
   superuser_interfaces: ^2.1.0
-  superuser_plugin_unix: ^2.0.0-m.2
-  superuser_plugin_windows: ^2.0.0-m.2
+  #superuser_plugin_unix: ^2.0.0-m.2
+  #superuser_plugin_windows: ^2.0.0-m.2
+  superuser_plugin_unix:
+    path: ../superuser_plugin_unix
+  superuser_plugin_windows:
+    path: ../superuser_plugin_windows
 dev_dependencies:
   flutter_lints: ^4.0.0
 platforms:
