--- a/superuser/pubspec.yaml
+++ b/superuser/pubspec.yaml
@@ -1,5 +1,5 @@
 name: superuser
-description: Detect, verify user who execute Flutter program has superuser role and running with superuser permission.
+description: Detect, verify user who execute Flutter program has superuser role and running with superuser permission with replicated UNIX identification commands.
 version: 2.0.0
 homepage: https://github.com/rk0cc/superuser
 repository: https://github.com/rk0cc/superuser/tree/main/superuser
