--- a/superuser/pubspec.yaml
+++ b/superuser/pubspec.yaml
@@ -1,6 +1,6 @@
 name: superuser
 description: Detect, verify user who execute Flutter program has superuser role and running with superuser permission with replicated UNIX identification commands.
-version: 2.0.0
+version: 2.1.0
 homepage: https://github.com/rk0cc/superuser
 repository: https://github.com/rk0cc/superuser/tree/main/superuser
 funding:
@@ -12,8 +12,9 @@ topics:
   - administrator
   - ffi
 environment: 
-  sdk: '>=3.4.0 <4.0.0'
-  flutter: '>=3.22.0'
+  sdk: ^3.6.0
+  flutter: '>=3.27.0'
+resolution: workspace
 dependencies:
   flutter:
     sdk: flutter
@@ -22,7 +23,7 @@ dependencies:
   superuser_plugin_unix: ^2.0.0
   superuser_plugin_windows: ^2.0.0
 dev_dependencies:
-  flutter_lints: ^4.0.0
+  flutter_lints: ^5.0.0
 platforms:
   linux:
   macos:
