--- a/superuser_plugin_windows/pubspec.yaml
+++ b/superuser_plugin_windows/pubspec.yaml
@@ -1,20 +1,21 @@
 name: superuser_plugin_windows
 description: "Detect, verify user who execute Flutter program has superuser role in Windows"
-version: 2.0.3
+version: 2.1.0
 homepage: https://github.com/rk0cc/superuser
 repository: https://github.com/rk0cc/superuser/tree/main/superuser_plugin_windows
 environment:
-  sdk: '>=3.4.0 <4.0.0'
-  flutter: '>=3.22.0'
+  sdk: ^3.6.0
+  flutter: '>=3.27.0'
+resolution: workspace
 dependencies:
   ffi: ^2.1.2
   flutter:
     sdk: flutter
   plugin_platform_interface: ^2.1.8
-  superuser_interfaces: ^2.1.0
+  superuser_interfaces: ^2.2.0
 dev_dependencies:
-  ffigen: ^12.0.0
-  flutter_lints: ^4.0.0
+  ffigen: ^16.0.0
+  flutter_lints: ^5.0.0
 flutter:
   plugin:
     platforms:
